--- a/docker_compose/nginx.yml
+++ b/docker_compose/nginx.yml
@@ -14,7 +14,9 @@ services:
       - "/etc/nginx/conf.d"
       - "/etc/nginx/vhost.d"
       - "/usr/share/nginx/html"
-      - $CERTS_DIR:/etc/nginx/certs:ro"
+      - "$CERTS_DIR:/etc/nginx/certs:ro"
+    networks:
+      - default
 
   nginx-gen:
     restart: always
@@ -26,6 +28,8 @@ services:
     volumes_from:
       - nginx
     entrypoint: /usr/local/bin/docker-gen -notify-sighup nginx -watch -wait 5s:30s /etc/docker-gen/templates/nginx.tmpl /etc/nginx/conf.d/default.conf
+    networks:
+      - default
 
   letsencrypt-nginx-proxy-companion:
     restart: always
@@ -38,6 +42,8 @@ services:
       - "$CERTS_DIR:/etc/nginx/certs:rw"
     environment:
       - NGINX_DOCKER_GEN_CONTAINER=nginx-gen
+    networks:
+      - default
 
 networks:
   default:
