update ddclient.conf to use ddns in google domains
stripped down of creds obv

--- a/ddclient/ddclient.conf
+++ b/ddclient/ddclient.conf
@@ -1,7 +1,15 @@
-ssl=yes
-run_daemon=true
+daemon=900
+syslog=yes
+
 use=web, web='https://domains.google.com/checkip'
-protocol=googledomains
-login=''
-password=''
-emamaker.com #to be changed on the need
+
+
+protocol=googledomains, \
+login='', password='' 
+*.emamaker.com
+
+protocol=googledomains \
+login='', password='' 
+emamaker.com
+
+
