--- a/docker_compose/nginx.yml
+++ b/docker_compose/nginx.yml
@@ -3,45 +3,45 @@ version: "2"
 services:
   nginx:
     restart: always
-    image: nginx
-    container_name: nginx
+    image: nginxproxy/nginx-proxy:latest
+    container_name: nginx-proxy
     ports:
       - "80:80"
       - "443:443"
-      - "3000:3000"
-      - "2222:2222"
     volumes:
       - "/etc/nginx/conf.d"
       - "/etc/nginx/vhost.d"
       - "/usr/share/nginx/html"
+      - "/var/run/docker.sock:/tmp/docker.sock:ro"
       - "$CERTS_DIR:/etc/nginx/certs:ro"
-    networks:
-      - default
 
   nginx-gen:
     restart: always
-    image: jwilder/docker-gen
+    image: nginxproxy/docker-gen
     container_name: nginx-gen
     volumes:
       - "/var/run/docker.sock:/tmp/docker.sock:ro"
       - "$NGINX_TMPL:/etc/docker-gen/templates/nginx.tmpl:ro"
+    networks:
+      - default
     volumes_from:
       - nginx
     entrypoint: /usr/local/bin/docker-gen -notify-sighup nginx -watch -wait 5s:30s /etc/docker-gen/templates/nginx.tmpl /etc/nginx/conf.d/default.conf
-    networks:
-      - default
 
-  letsencrypt-nginx-proxy-companion:
+  acme-companion:
     restart: always
-    image: jrcs/letsencrypt-nginx-proxy-companion
-    container_name: letsencrypt-nginx-proxy-companion
+    image: nginxproxy/acme-companion:latest
+    container_name: acme-companion
     volumes_from:
       - nginx
     volumes:
       - "/var/run/docker.sock:/var/run/docker.sock:ro"
       - "$CERTS_DIR:/etc/nginx/certs:rw"
+      - "/home/emamaker/acme.sh:/etc/acme.sh"
     environment:
       - NGINX_DOCKER_GEN_CONTAINER=nginx-gen
+    depends_on:
+      - nginx
     networks:
       - default
 
