--- a/docker_compose/nginx.yml
+++ b/docker_compose/nginx.yml
@@ -1,3 +1,4 @@
+
 version: "2"
 
 services:
@@ -9,24 +10,11 @@ services:
       - "80:80"
       - "443:443"
     volumes:
-      - "/etc/nginx/conf.d"
       - "/etc/nginx/vhost.d"
       - "/usr/share/nginx/html"
       - "/var/run/docker.sock:/tmp/docker.sock:ro"
       - "$CERTS_DIR:/etc/nginx/certs:ro"
-
-  nginx-gen:
-    restart: always
-    image: nginxproxy/docker-gen
-    container_name: nginx-gen
-    volumes:
-      - "/var/run/docker.sock:/tmp/docker.sock:ro"
-      - "$NGINX_TMPL:/etc/docker-gen/templates/nginx.tmpl:ro"
-    networks:
-      - default
-    volumes_from:
-      - nginx
-    entrypoint: /usr/local/bin/docker-gen -notify-sighup nginx -watch -wait 5s:30s /etc/docker-gen/templates/nginx.tmpl /etc/nginx/conf.d/default.conf
+      - "$NGINX_CONF_DIR:/etc/nginx/conf.d"
 
   acme-companion:
     restart: always
