--- a/docker_compose/nextcloud.yml
+++ b/docker_compose/nextcloud.yml
@@ -3,7 +3,7 @@ version: '2'
 services:
   db:
     image: mariadb:10.5
-#    restart: always
+    restart: always
     command: --transaction-isolation=READ-COMMITTED --binlog-format=ROW
     volumes:
       - $NEXTCLOUD_DB_DATADIR:/var/lib/mysql
@@ -17,7 +17,7 @@ services:
 
   app:
     image: nextcloud:latest
-#    restart: always
+    restart: always
     expose:
       - "80"
       - "443"
@@ -25,6 +25,7 @@ services:
       - db
     volumes:
       - $NEXTCLOUD_DATADIR:/var/www/html
+      - $SYNCTHING_DIR:/syncthing
     environment:
 #      - NEXTCLOUD_ADMIN_USER=testuser #this is just for initial setup, and the user can be delete afterwards
 #      - NEXTCLOUD_ADMIN_PASSWORD=test123
@@ -33,9 +34,9 @@ services:
       - MYSQL_DATABASE=nextcloud
       - MYSQL_USER=nextcloud
       - MYSQL_HOST=db
-      - VIRTUAL_HOST=files.$LETSENCRYPT_DOMAIN
+      - VIRTUAL_HOST=nextcloud.$LETSENCRYPT_DOMAIN
       - VIRTUAL_PORT=80
-      - LETSENCRYPT_HOST=files.$LETSENCRYPT_DOMAIN
+      - LETSENCRYPT_HOST=nextcloud.$LETSENCRYPT_DOMAIN
       - LETSENCRYPT_EMAIL=$LETSENCRYPT_EMAIL
     networks:
       - default
